--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -2,3 +2,18 @@ body {
     padding: 20px;
     text-align: center;
 }
+
+.itemEntry {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin: 0 200;
+}
+
+.itemEntryP {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+    /* flex-wrap: wrap; */
+}
