--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -6,7 +6,7 @@ body {
 .itemEntry {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
     margin: 0 200;
 }
 
@@ -14,6 +14,14 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px;
+    /* padding: 10px; */
     /* flex-wrap: wrap; */
+}
+
+.name {
+    padding: 10px;
+}
+
+.quantity {
+    padding: 10px;
 }
