Added CSS styling for Update and Delete Item buttons

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -23,3 +23,17 @@ body {
 .quantity {
     padding: 10px;
 }
+
+.buttons {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.updateItem {
+    padding: 5px;
+}
+
+.deleteItem {
+    padding: 5px;
+}
