--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,6 +1,8 @@
 body {
     padding: 20px;
     text-align: center;
+    background-color: rgb(233, 172, 114);
+    background-image: url("https://wallpaperaccess.com/full/2797527.jpg");
 }
 
 .itemEntry {
@@ -8,6 +10,7 @@ body {
     flex-direction: column;
     padding: 10px;
     margin: 0 200;
+    border-bottom: solid;
 }
 
 .itemEntryP {
