--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -8,7 +8,32 @@ body {
 .main {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     padding: 20px;
+}
+
+/* .titleInput {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+} */
+
+.title {
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.inputForm {
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.itemList {
+    background-color: rgb(252, 252, 157);
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .itemEntry {
