--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -22,18 +22,21 @@ body {
     background-color: white;
     padding: 20px;
     border-radius: 20px;
+    margin: 30px;
 }
 
 .inputForm {
     background-color: white;
     padding: 20px;
     border-radius: 20px;
+    margin: 30px;
 }
 
 .itemList {
     background-color: rgb(252, 252, 157);
     padding: 20px;
     border-radius: 20px;
+    margin: 30px;
 }
 
 .itemEntry {
